--- a/index.html
+++ b/index.html
@@ -56,19 +56,31 @@
 <body class="antialiased selection:bg-ukg-cyan selection:text-black">
 
     <!-- Navegación Superior -->
-    <nav class="sticky top-0 z-50 glass-panel border-b border-gray-800">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex items-center justify-between h-16">
-                <div class="flex items-center gap-3">
-                    <div class="w-8 h-8 bg-ukg-cyan rounded-md flex items-center justify-center text-black font-bold">U</div>
-                    <span class="font-bold text-xl tracking-tight">Estrategia LATAM <span class="text-ukg-cyan text-sm font-normal ml-1">| Webinar Q1</span></span>
-                </div>
-                <div class="hidden md:block">
-                    <span class="px-3 py-1 rounded-full bg-ukg-cyan/10 text-ukg-cyan text-xs font-semibold border border-ukg-cyan/20">CONFIDENCIAL</span>
-                </div>
-            </div>
-        </div>
-    </nav>
+  <nav class="sticky top-0 z-50 glass-panel border-b border-gray-800">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex items-center justify-between h-16">
+      
+      <!-- IZQUIERDA: TÍTULO -->
+      <div class="flex items-center gap-3">
+        <span class="font-bold text-xl tracking-tight">
+          Estrategia LATAM 
+          <span class="text-ukg-cyan text-sm font-normal ml-1">| Webinar Q1</span>
+        </span>
+      </div>
+
+      <!-- DERECHA: LOGO MTI -->
+      <div class="flex items-center">
+        <img 
+          src="mti-logo.png" 
+          alt="MTI Selling" 
+          class="h-9 w-auto object-contain"
+        />
+      </div>
+
+    </div>
+  </div>
+</nav>
+
 
     <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-10 space-y-12">
 
